Add mock design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="appWhite">#FFFFFF</color>
     <color name="gray">#7F7F7F</color>
     <color name="yellow">#FFED00</color>
+    <color name="photoGray">#E5E5E5</color>
 </resources>
